@@ -1,98 +1,133 @@
 // -*- C++ -*-
 // $Id$
 
-#ifndef HELLO_RECEIVER_EXEC_H_
-#define HELLO_RECEIVER_EXEC_H_
+// TAO_IDL - Generated from
+// be/be_codegen.cpp:1283
 
+#ifndef CIAO_HELLO_RECEIVER_EXEC_0PTXJW_H_
+#define CIAO_HELLO_RECEIVER_EXEC_0PTXJW_H_
+
+#include /**/ "ace/pre.h"
 
 #include "Hello_ReceiverEC.h"
-
-#include /**/ "Receiver_exec_export.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include /**/ "Receiver_exec_export.h"
 #include "tao/LocalObject.h"
 
 namespace CIAO_Hello_Receiver_Impl
 {
   typedef ACE_Atomic_Op <TAO_SYNCH_MUTEX, CORBA::ULong > Atomic_ULong;
 
-  class HELLO_RECEIVER_EXEC_Export DDSHello_Listener_exec_i
+  // TAO_IDL - Generated from
+  // be/be_visitor_component/facet_exh.cpp:53
+  class HELLO_RECEIVER_EXEC_Export info_out_data_listener_exec_i
     : public virtual ::Hello::CCM_Listener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    DDSHello_Listener_exec_i (Atomic_ULong &,
-                              const ACE_CString &);
-    virtual ~DDSHello_Listener_exec_i (void);
+    info_out_data_listener_exec_i (
+      ::Hello::CCM_Receiver_Context_ptr ctx,
+      Atomic_ULong &received,
+      const ACE_CString &name);
 
-    virtual void
-    on_one_data (
-      const DDSHello & an_instance,
+    virtual ~info_out_data_listener_exec_i (void);
+
+    // Operations and attributes from ::Hello::Listener
+
+    virtual
+    void on_one_data (
+      const ::DDSHello & datum,
       const ::CCM_DDS::ReadInfo & info);
 
-    virtual void
-    on_many_data (
-      const DDSHelloSeq & an_instance,
-      const ::CCM_DDS::ReadInfoSeq & info);
+    virtual
+    void on_many_data (
+      const ::DDSHelloSeq & data,
+      const ::CCM_DDS::ReadInfoSeq & infos);
+
   private:
+    ::Hello::CCM_Receiver_Context_var ciao_context_;
     Atomic_ULong &received_;
     const ACE_CString &name_;
   };
 
-  class HELLO_RECEIVER_EXEC_Export PortStatusListener_exec_i
+  // TAO_IDL - Generated from
+  // be/be_visitor_component/facet_exh.cpp:53
+  class HELLO_RECEIVER_EXEC_Export info_out_status_exec_i
     : public virtual ::CCM_DDS::CCM_PortStatusListener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    PortStatusListener_exec_i (Atomic_ULong &);
-    virtual ~PortStatusListener_exec_i (void);
+    info_out_status_exec_i (
+      ::Hello::CCM_Receiver_Context_ptr ctx,
+      Atomic_ULong &lost);
+    virtual ~info_out_status_exec_i (void);
 
-    virtual void
-    on_requested_deadline_missed (
+    // Operations and attributes from ::CCM_DDS::PortStatusListener
+
+    virtual
+    void on_requested_deadline_missed (
       ::DDS::DataReader_ptr the_reader,
       const ::DDS::RequestedDeadlineMissedStatus & status);
 
-    virtual void
-    on_sample_lost (
+    virtual
+    void on_sample_lost (
       ::DDS::DataReader_ptr the_reader,
       const ::DDS::SampleLostStatus & status);
+
   private:
+    ::Hello::CCM_Receiver_Context_var ciao_context_;
     Atomic_ULong &lost_;
   };
 
-  class HELLO_RECEIVER_EXEC_Export ConnectorStatusListener_exec_i
+  // TAO_IDL - Generated from
+  // be/be_visitor_component/facet_exh.cpp:53
+  class HELLO_RECEIVER_EXEC_Export info_out_connector_status_exec_i
     : public virtual ::CCM_DDS::CCM_ConnectorStatusListener,
       public virtual ::CORBA::LocalObject
   {
   public:
-    ConnectorStatusListener_exec_i (void);
-    virtual ~ConnectorStatusListener_exec_i (void);
+    info_out_connector_status_exec_i (
+      ::Hello::CCM_Receiver_Context_ptr ctx);
+    virtual ~info_out_connector_status_exec_i (void);
+
+    // Operations and attributes from ::CCM_DDS::ConnectorStatusListener
 
     virtual
-    void on_inconsistent_topic( ::DDS::Topic_ptr the_topic,
-                                    const DDS::InconsistentTopicStatus & status);
-    virtual
-    void on_requested_incompatible_qos( ::DDS::DataReader_ptr the_reader,
-                                    const DDS::RequestedIncompatibleQosStatus & status);
-    virtual
-    void on_sample_rejected( ::DDS::DataReader_ptr the_reader,
-                                    const DDS::SampleRejectedStatus & status);
-    virtual
-      void on_offered_deadline_missed( ::DDS::DataWriter_ptr the_writer,
-                                    const DDS::OfferedDeadlineMissedStatus & status);
-    virtual
-    void on_offered_incompatible_qos( ::DDS::DataWriter_ptr the_writer,
-                                    const DDS::OfferedIncompatibleQosStatus & status);
-    virtual
-    void on_unexpected_status( ::DDS::Entity_ptr the_entity,
-                                    ::DDS::StatusKind  status_kind);
-    virtual
-    void on_subscription_matched (::DDS::DataReader_ptr the_reader,
-                                    const ::DDS::SubscriptionMatchedStatus & status);
+    void on_inconsistent_topic (
+      ::DDS::Topic_ptr the_topic,
+      const ::DDS::InconsistentTopicStatus & status);
 
+    virtual
+    void on_requested_incompatible_qos (
+      ::DDS::DataReader_ptr the_reader,
+      const ::DDS::RequestedIncompatibleQosStatus & status);
+
+    virtual
+    void on_sample_rejected (
+      ::DDS::DataReader_ptr the_reader,
+      const ::DDS::SampleRejectedStatus & status);
+
+    virtual
+    void on_offered_deadline_missed (
+      ::DDS::DataWriter_ptr the_writer,
+      const ::DDS::OfferedDeadlineMissedStatus & status);
+
+    virtual
+    void on_offered_incompatible_qos (
+      ::DDS::DataWriter_ptr the_writer,
+      const ::DDS::OfferedIncompatibleQosStatus & status);
+
+    virtual
+    void on_unexpected_status (
+      ::DDS::Entity_ptr the_entity,
+      ::DDS::StatusKind status_kind);
+
+  private:
+    ::Hello::CCM_Receiver_Context_var ciao_context_;
   };
 
   class HELLO_RECEIVER_EXEC_Export Receiver_exec_i
@@ -103,14 +138,14 @@ namespace CIAO_Hello_Receiver_Impl
     Receiver_exec_i (void);
     virtual ~Receiver_exec_i (void);
 
-    // Supported operations and attributes.
-    // Port operations.
+    //@{
+    /** Supported operations and attributes. */
 
-    virtual ::CORBA::ULong expected_samples (void);
-    virtual void expected_samples (::CORBA::ULong expected_samples);
+    //@}
 
-    virtual char * name (void);
-    virtual void name (const char *name);
+    //@{
+    /** Component attributes and port operations. */
+
 
     virtual ::Hello::CCM_Listener_ptr
     get_info_out_data_listener (void);
@@ -121,19 +156,50 @@ namespace CIAO_Hello_Receiver_Impl
     virtual ::CCM_DDS::CCM_ConnectorStatusListener_ptr
     get_info_out_connector_status (void);
 
-    // Operations from Components::SessionComponent.
+    // TAO_IDL - Generated from
+    // be/be_visitor_operation/operation_ch.cpp:36
+
+    virtual char *
+    name (void);
+
+    // TAO_IDL - Generated from
+    // be/be_visitor_operation/operation_ch.cpp:36
 
     virtual void
-    set_session_context (::Components::SessionContext_ptr ctx);
+    name (
+      const char * name);
+
+    // TAO_IDL - Generated from
+    // be/be_visitor_operation/operation_ch.cpp:36
+
+    virtual ::CORBA::ULong
+    expected_samples (void);
+
+    // TAO_IDL - Generated from
+    // be/be_visitor_operation/operation_ch.cpp:36
+
+    virtual void
+    expected_samples (
+      ::CORBA::ULong expected_samples);
+    //@}
+
+    //@{
+    /** Operations from Components::SessionComponent. */
+
+    virtual void set_session_context (::Components::SessionContext_ptr ctx);
 
     virtual void configuration_complete (void);
 
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
+    //@}
 
   private:
-    ::Hello::CCM_Receiver_Context_var context_;
+    ::Hello::CCM_Receiver_Context_var ciao_context_;
+    ::Hello::CCM_Listener_var ciao_info_out_data_listener_;
+    ::CCM_DDS::CCM_PortStatusListener_var ciao_info_out_status_;
+    ::CCM_DDS::CCM_ConnectorStatusListener_var ciao_info_out_connector_status_;
     CORBA::ULong expected_;
     Atomic_ULong received_;
     Atomic_ULong lost_;
@@ -144,5 +210,6 @@ namespace CIAO_Hello_Receiver_Impl
   create_Hello_Receiver_Impl (void);
 }
 
-#endif /* ifndef */
+#include /**/ "ace/post.h"
 
+#endif /* ifndef */
