@@ -1,3 +1,12 @@
+Thu Oct  7 11:39:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
+        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
+          Regenerated these files with -Gex and pasted the original
+          implementation back into the generated files, the destructors of
+          the facets aren't called anymore with the methods as generated
+          by tao_idl
+
 Thu Oct  7 11:05:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Deployment/Handlers/Connection_Handler.h:
